Try to fix layout bug in user.voters page.

--- a/application/static/css/user/voters.less
+++ b/application/static/css/user/voters.less
@@ -2,16 +2,20 @@
   margin-top: 30px;
 
   .voter {
-    display: inline-block;
+    float: left;
     vertical-align: top;
     border: 1px solid #eee;
     border-radius: 2px;
-    margin: 0 20px 20px 0;
+    margin: 0 14px 20px 0;
     width: 130px;
     cursor: pointer;
     text-align: center;
     padding: 25px 10px 10px 10px;
     color: #333;
+
+    &:nth-child(6n) {
+      margin-right: 0;
+    }
 
     &:hover {
       background-color: #F6F6F6;
@@ -27,6 +31,8 @@
     .name {
       font-weight: bold;
       margin-bottom: 5px;
+      overflow: hidden;
+      white-space: nowrap;
     }
 
     .count {
